--- a/San-Jose.html
+++ b/San-Jose.html
@@ -39,26 +39,26 @@
 <div class="column1R">
         <h1>Densidad poblacional</h1>
     <p>La ciudad de San José tiene una población estimada de 1,373,000 habitantes. Tiene una extensión territorial de 44,62 km2. Esta cifra representa el 36% de la población total de Costa Rica, que aunque pareciera alta, en realidad San José tiene la más baja densidad de población. La población total de hombres es de 22, 616  y la de mujeres es de 24, 397.</p>
-    <div class="imagenesParaInformacion" style="width: auto; height: auto; display: flex; flex-wrap: wrap;">
+    <div class="imagenesParaInformacion" style="width: 100%; height: auto; display: flex; flex-wrap: wrap; overflow:scroll;">
         <img src="http://127.0.0.1:5501/images/image9.png" alt=""><img src="http://127.0.0.1:5501/images/image50.png" alt="">
     </div>
     <h4>Puriscal</h4>
     <p>Puriscal, tiene una extensión de 555,8 km2 y su población de 36, 689 habitantes. La población masculina es de 18, 415 y la femenina es de 18, 274. La longitud máxima es de 40 km, en dirección norte a sur, desde la confluencia del río Chucás con la quebrada La Pita hasta el río Chires. El río Pirris establece límite al norte del cantón, el sur limita con la cordillera de la Costa y su límite oriental es el cantón de Dota.</p>
-    <div class="imagenesParaInformacion" style="width: auto; height: auto; display: flex; flex-wrap: wrap;">
+    <div class="imagenesParaInformacion" style="width: 100%; height: auto; display: flex; flex-wrap: wrap; overflow:scroll;">
         <img src="http://127.0.0.1:5501/images/image56.png" alt=""><img src="http://127.0.0.1:5501/images/image4.png" alt=""><img src="http://127.0.0.1:5501/images/image49.png" alt="" style="width: 450px;">
     </div>
     <h4>Aserri</h4>
-    <div class="imagenesParaInformacion" style="width: auto; height: auto; display: flex; flex-wrap: wrap;">
+    <div class="imagenesParaInformacion" style="width: 100%; height: auto; display: flex; flex-wrap: wrap; overflow:scroll;">
         <img src="http://127.0.0.1:5501/images/image5.png" alt=""><img src="http://127.0.0.1:5501/images/image21.png" alt=""><img src="http://127.0.0.1:5501/images/image10.png" alt="" style="width: 450px;">
     </div>
     <h4>Tarrazú</h4>
     <p> En el cantón de Tarrazú  tiene una extensión de  289,9 km2 y 18, 334 habitantes. Su población masculina es de 9,113 y la femenina es de 9,221. Sus límites son: al norte de León Cortés, al sur Quepos y Dota, al este Dota y el Guarco y al oeste León Cortés y Quepos.</p>
-    <div class="imagenesParaInformacion" style="width: auto; height: auto; display: flex; flex-wrap: wrap;">
+    <div class="imagenesParaInformacion" style="width: 100%; height: auto; display: flex; flex-wrap: wrap; overflow:scroll;">
         <img src="http://127.0.0.1:5501/images/image3.png" alt=""><img src="http://127.0.0.1:5501/images/image44.png" alt="" style="width: 450px;">
     </div>
     <h4>Santa Ana</h4>
     <p>En el último lugar  Santa Ana tiene una extensión de 61,3 km2 y su población es de 59, 770 habitantes. Su población masculina es de 28, 699 y la femenina es de 31, 071. Limita al norte con el cantón de Alajuela, al sur y oeste con el cantón de Mora, al este con el cantón de Escazú, y al noreste con el cantón de Belén.</p>
-    <div class="imagenesParaInformacion" style="width: auto; height: auto; display: flex; flex-wrap: wrap;">
+    <div class="imagenesParaInformacion" style="width: 100%; height: auto; display: flex; flex-wrap: wrap; overflow:scroll;">
         <img src="http://127.0.0.1:5501/images/image17.png" alt=""><img src="http://127.0.0.1:5501/images/image34.png" alt="" style="width: 450px;"><img src="http://127.0.0.1:5501/images/image13.png" alt="" style="width: 450px;">
     </div>
     <h1>Lengua Materna y Extrangera</h1>
@@ -89,13 +89,13 @@
     <p>Uno de los trajes típicos de este país consiste en que la mujer usa un vestido ancho con colores vivos, con trenzas, una flor en su cabello y sandalias. El hombre utiliza un traje sencillo con colores chillantes como el azul y el amarillo, un pañuelo en el cuello y un fajón rojo que a la hora de bailar se lo quitan. En San José, la mujer vestía una falda y blusa volada, la blusa llevaba un cinto negro, el cabello adornado con flores y en el cuello traian un listón de terciopelo negro.</p>
     <h1>Moneda</h1> 
     <p>La primera moneda usada en Costa Rica fue el peso cuyo uso empezó en 1839 por Braulio Carrillo y actualmente la moneda es el colón, ha sido la moneda de Costa Rica desde 1896. Actualmente, existen seis títulos en billetes y siete tipos de monedas distintas en circulación. 1 córdoba son 14,79 colones, 100 córdobas son 1,457.88 colones, 1000 córdobas son 14,578. 81 colones.</p>
-    <div class="imagenesParaInformacion" style="width: auto; height: auto; display: flex; flex-wrap: wrap;">
+    <div class="imagenesParaInformacion" style="width: 100%; height: auto; display: flex; flex-wrap: wrap; overflow:scroll;">
         <img src="Monedas.jpeg" alt="">
     </div>
     <h1>Gastronomía</h1>
     <p>La ciudad de San José, en Costa Rica, ofrece una rica y variada oferta gastronómica que refleja la diversidad cultural y la fusión de sabores que caracteriza a este país centroamericano. En sus calles y mercados, los visitantes pueden encontrar una amplia gama de platos tradicionales y contemporáneos que satisfacen todos los gustos. La cocina costarricense se basa en ingredientes frescos y locales, y en San José se puede degustar desde los emblemáticos "casados" (plato típico compuesto por arroz, frijoles, carne, plátano y ensalada), hasta deliciosos ceviches preparados con mariscos frescos y aderezados con limón y especias.</p>
     <p>Además de la comida costarricense tradicional, San José también ofrece una gran diversidad de opciones internacionales gracias a su carácter multicultural. Los restaurantes de la ciudad sirven platos de distintos lugares del mundo, como comida italiana, japonesa, mexicana, peruana y mucho más. Los mercados como el Mercado Central son verdaderos tesoros gastronómicos, donde los lugareños y los visitantes pueden probar bocados auténticos y descubrir los sabores únicos de San José. En resumen, la comida de San José es una mezcla vibrante de tradición y modernidad, ofreciendo una experiencia culinaria única y deliciosa para todos los paladares.</p>
-    <div class="imagenesParaInformacion" style="width: auto; height: auto; display: flex; flex-wrap: wrap;">
+    <div class="imagenesParaInformacion" style="width: 100%; height: auto; display: flex; flex-wrap: wrap; overflow:scroll;">
         <img src="http://127.0.0.1:5501/images/image12.png" alt="" style="width: 300px; height: 310px;margin: 5px;"><img src="http://127.0.0.1:5501/images/image36.png" alt="" style="width: 300px; height: 310px; margin: 5px;"><img src="http://127.0.0.1:5501/images/image30.png" alt="" style="width: 300px; height: 310px; margin: 5px;">
     </div>
     <h1>Comercio</h1>
@@ -115,7 +115,7 @@
     <p><strong>Cesteria</strong> La materia prima de esta artesanía es el tule, la pita y el bambú. En esta técnica se destacan los miembros de la Reserva Indígena Quitirrisí.</p>    
     <p><strong>Hicaros o huacal</strong>Los también llamados huacales se hacen con base en los frutos del árbol de Jícaro, cuyo cultivo se da principalmente en el sur del país. Los artesanos limpian el interior de los frutos y luego los decoran.</p>
     <p><strong>Mascaras</strong>Son hechas con madera de balsa son una de las más importantes representaciones artísticas de las comunidades indígenas boruca Maleku y Talamanca. Los motivos de estas máscaras son de animales y elementos propios de la cosmovisión indígena.</p>
-    <div class="imagenesParaInformacion" style="width: auto; height: auto; display: flex; flex-wrap: wrap;">
+    <div class="imagenesParaInformacion" style="width: 100%; height: auto; display: flex; flex-wrap: wrap; overflow:scroll;">
         <img src="http://127.0.0.1:5501/images/image29.png" alt="" style="display: flex; flex: 1; margin: 55px;">
     </div>
     <h1>Innovacion tecnologica</h1>
@@ -144,15 +144,15 @@
     <p>Uso abundante de agroquímicos: Uso excesivo de fertilizantes y plaguicidas, cuando frutas y verduras llegan los consumidores, aún contienen de estos residuos químicos, También en hoyos, por lo que se contamina el agua. La solución es fomentar el uso de nuevas tecnologías y hacer un mejor manejo de ciertos desechos que son bañados por el agua y hacen que esta se contamine.</p>
     <h1>Especies en peligro de extincion</h1>
     <p>Costa Rica a pesar de no ser un país grande es uno de los que tienen mayor diversidad de especies, esta gran diversidad se debe a su posición geográfica tropical al estar entre zonas costeras  hay una gran variedad de ecosistemas.</p>
-    <div class="imagenesParaInformacion" style="width: auto; height: auto; display: flex; flex-wrap: wrap;">
+    <div class="imagenesParaInformacion" style="width: 100%; height: auto; display: flex; flex-wrap: wrap; overflow:scroll;">
         <img src="http://127.0.0.1:5501/images/image16.png" alt="">
     </div>
     <p><strong>Guacamaya roja</strong>Este hábitat indispensable para la supervivencia de una especie emblemática se reduce año tras año a causa de los incendios forestales, la expansión ganadera y la aparición de nuevos asentamientos humanos .</p>
-    <div class="imagenesParaInformacion" style="width: auto; height: auto; display: flex; flex-wrap: wrap;">
+    <div class="imagenesParaInformacion" style="width: 100%; height: auto; display: flex; flex-wrap: wrap; overflow:scroll;">
         <img src="http://127.0.0.1:5501/images/image46.png" alt="">
     </div>
     <p><strong>Resplandeciente quetzal</strong>  El quetzal guatemalteco está considerado casi amenazado en la Lista Roja de la UICN, siendo la destrucción de su hábitat la principal amenaza. Tiene un papel importante en la mitología mesoamericana y está estrechamente relacionado con Quetzalcóatl.</p>
-    <div class="imagenesParaInformacion" style="width: auto; height: auto; display: flex; flex-wrap: wrap;">
+    <div class="imagenesParaInformacion" style="width: 100%; height: auto; display: flex; flex-wrap: wrap; overflow:scroll;">
         <img src="http://127.0.0.1:5501/images/image40.png" alt="">
     </div>
     <p><strong>Jaguar</strong> Las amenazas a las que se enfrentan los jaguares en Costa Rica, no difieren a las de otros países como la pérdida de hábitat, presión de cacería y disminución de sus presas las cuales están llevando al borde de la extinción a la especie.</p>
@@ -161,7 +161,7 @@
     </p>
     <h1>Fuentes de energía</h1>
     <p>Para este año, los tres recursos principales de la matriz costarricense son el agua, con aporte de 74,12%; seguido por la geotermia con 12,97% y el viento con 12,33%. La biomasa y el sol completan las fuentes propias del país y acumulan entre ambas 0,56%. El respaldo térmico de combustibles representa el 0,02%. Las autoridades revelan que en 2015 Costa Rica alcanzó el 98,99% de energía renovable, en 2020 sumó 99,79% mientras que al 14 de diciembre de 2021 llegó al 99,98%.</p>
-    <div class="imagenesParaInformacion" style="width: auto; height: auto; display: flex; flex-wrap: wrap;">
+    <div class="imagenesParaInformacion" style="width: 100%; height: auto; display: flex; flex-wrap: wrap; overflow:scroll;">
         <img src="http://127.0.0.1:5501/images/image24.png" alt=""><img src="Fuentes-energua.jpeg" alt="" style="height: 250px; width: 550px;">
     </div>
 
