--- a/San-Jose.html
+++ b/San-Jose.html
@@ -48,6 +48,7 @@
         <img src="http://127.0.0.1:5501/images/image56.png" alt=""><img src="http://127.0.0.1:5501/images/image4.png" alt=""><img src="http://127.0.0.1:5501/images/image49.png" alt="" style="width: 450px;">
     </div>
     <h4>Aserri</h4>
+    <p>En el cantón de  Aserrí su  extensión es de 167, 7 km2 y su población es de 68, 802 habitantes. Su población masculina es de 30, 638 y la femenina es de 32, 168  y limita con:  al este, Desamparados; al oeste, A costa; al norte, Alajuelita y Desamparados; al sudeste, León Cortés, Tarrazú y Parrita.</p>
     <div class="imagenesParaInformacion" style="width: 100%; height: auto; display: flex; flex-wrap: wrap; overflow:scroll;">
         <img src="http://127.0.0.1:5501/images/image5.png" alt=""><img src="http://127.0.0.1:5501/images/image21.png" alt=""><img src="http://127.0.0.1:5501/images/image10.png" alt="" style="width: 450px;">
     </div>
