--- a/puntarenas.html
+++ b/puntarenas.html
@@ -39,7 +39,7 @@
         <h1>Densidad poblacional</h1>
     <p>En Montes de Oro cuenta con 13,593 habitantes y una extensión territorial de 244.76 km², calculandose en 55.53 habitantes por km². En Esparza cuenta con 30,068 habitantes y una extensión territorial de 216.80 km², calculando se en 138.69 habitantes por km². En Buenos Aires cuenta con 47,494 habitantes y una extensión territorial de 555.37 km², calculando se en 85.51 habitantes por km². En Puntarenas cuenta con 37,423 habitantes y una extensión territorial de 1842.33 km², calculando se en 20.31 habitantes por km².</p>
     <div class="imagenesParaInformacion" style="width: 100%;height: auto;display: flex;flex-direction: column;flex-basis: 38%;flex: 0 16 72%;flex-wrap: wrap; overflow: scroll;">
-        <img src="WhatsApp Image 2023-08-30 at 7.46.51 AM.jpeg" alt="" style="flex: 1;"><img src="WhatsApp Image 2023-08-30 at 8.07.22 AM.jpeg" alt="">
+        <img src="WhatsApp Image 2023-08-30 at 8.07.22 AM.jpeg" alt="">
     </div>
     <h1>Extencion Territorial/Cada canton</h1>
     <p>El cantón de Esparza cuenta con un área de 216,80 km².Sus límites son al sur colinda con la costa del Océano Pacífico, al norte con Montes de Oro y San Ramón, al este con San Mateo y Orotina, y al oeste con el cantón de Puntarenas. Montes de Oro posee una extensión territorial de 244.76 km² y está.Montes de Oro es el cantón número 4 de la Provincia de Puntarenas, en la costa pacífica de Costa Rica. Ubicado en el norte de la provincia, es uno de los cuatro cantones de la provincia de Puntarenas que no tiene límites con el Océano Pacífico.</p>
