--- a/puntarenas.html
+++ b/puntarenas.html
@@ -1,4 +1,4 @@
-<html lang="en"><head>
+p<html lang="en"><head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,7 +34,7 @@
         <img src="fondo-morado-azul-degradado-palabra-ombre.jpg" alt="fondo" class="fondo">
     </div>
 <div class="InfoGeneral">
-    <section id="comida" style="margin-top: -150px;"></section>
+    <section id="comida"></section>
 <div class="column1R">
         <h1>Densidad poblacional</h1>
     <p>En Montes de Oro cuenta con 13,593 habitantes y una extensión territorial de 244.76 km², calculandose en 55.53 habitantes por km². En Esparza cuenta con 30,068 habitantes y una extensión territorial de 216.80 km², calculando se en 138.69 habitantes por km². En Buenos Aires cuenta con 47,494 habitantes y una extensión territorial de 555.37 km², calculando se en 85.51 habitantes por km². En Puntarenas cuenta con 37,423 habitantes y una extensión territorial de 1842.33 km², calculando se en 20.31 habitantes por km².</p>
