--- a/puntarenas.html
+++ b/puntarenas.html
@@ -35,7 +35,7 @@ p<html lang="en"><head>
     </div>
 <div class="InfoGeneral">
     <section id="comida"></section>
-<div class="column1R">
+<div class="column1R" style="margin-top:150px;">
         <h1>Densidad poblacional</h1>
     <p>En Montes de Oro cuenta con 13,593 habitantes y una extensión territorial de 244.76 km², calculandose en 55.53 habitantes por km². En Esparza cuenta con 30,068 habitantes y una extensión territorial de 216.80 km², calculando se en 138.69 habitantes por km². En Buenos Aires cuenta con 47,494 habitantes y una extensión territorial de 555.37 km², calculando se en 85.51 habitantes por km². En Puntarenas cuenta con 37,423 habitantes y una extensión territorial de 1842.33 km², calculando se en 20.31 habitantes por km².</p>
     <div class="imagenesParaInformacion" style="width: 100%;height: auto;display: flex;flex-direction: column;flex-basis: 38%;flex: 0 16 72%;flex-wrap: wrap; overflow: scroll;">
