--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
             <ul class="menu">
                 <a class="links" href="#"><li class="elements">Home</li></a>
                 <a class="links" href="Informacion.html"><li class="elements">About</li></a>
-                <a class="links" href="#"><li class="elements">blog</li></a>
-                <a class="links" href="#"><li class="elements">contact</li></a>
             </ul>
         </nav>
 </header> 
@@ -95,31 +93,31 @@
        <div class="elementsContainer">
           <img src="Escudo_de_la_Provincia_de_San_José.svg.png" alt="Imagen">
           <h3>San jose</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
+          <p>Capital de Costa Rica, ubicada en el Valle Central.</p>
           <a href="San-Jose.html"><input type="button" value='Ver mas' class="button"></a>
        </div>
        <div class="elementsContainer">
           <img src="Escudo_de_la_Provincia_de_San_José.svg.png" alt="Imagen">
           <h3>Puriscal</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
+          <p>Cuarto cantón de San José, con varios patrimonios históricos nacionales.</p>
           <a href="San-Jose.html"><input type="button" value='Ver mas' class="button"></a>
        </div>   
        <div class="elementsContainer">
         <img src="Escudo_de_la_Provincia_de_San_José.svg.png" alt="Imagen">
         <h3>Aserrí</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
+        <p>Cantón situado en el centro de San José, perteneciente parcialmente a la Gran Área Metropolitana.</p>
         <a href="San-Jose.html"><input type="button" value='Ver mas' class="button"></a>
      </div>
      <div class="elementsContainer">
         <img src="Escudo_de_la_Provincia_de_San_José.svg.png" alt="Imagen">
         <h3>Tarrazú</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
+        <p>Quinto cantón de San José, forma parte de la Zona de los Santos.</p>
         <a href="San-Jose.html"><input type="button" value='Ver mas' class="button"></a>
      </div>
      <div class="elementsContainer">
         <img src="Escudo_de_la_Provincia_de_San_José.svg.png" alt="Imagen">
         <h3>Santa Ana</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
+        <p>Distrito y ciudad principal del cantón de Santa Ana.</p>
         <a href="San-Jose.html"><input type="button" value='Ver mas' class="button"></a>
      </div>
      </div>
