--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
     <div class="footerTextContainer" style="display: flex; flex-direction: column; margin: 20px; color: white;">
     <h3>Derechos Reservados 2023, Colegio Pureza de Maria, Managua</h3>
     <h4>Diseño y diagramacion, Nestor Castillo Espinosa</h4>
-</div>
+    <h4>Diseño logo feria cultural, Dilenia sophia medal bonilla</h4>
+    </div>
 <div class="icons">
     <div onclick="window.open('https://www.instagram.com/pmariamanagua/?hl=es')" class="icon1" style="width: 6.7vh; height: 2.8em;"></div>
     <div onclick="window.open('https://www.facebook.com/people/Colegio-Pureza-De-Mar%C3%ADa-Mga/100063892570364/')" class="icon2" style="width: 6.7vh; height: 2.8em;"></div>
